hphp/hack/test/ifc/check/foreach_traversable_iterable.php.exp
=== IFC analysis results for foreach_traversable_iterable.php
File "foreach_traversable_iterable.php", line 106, characters 5-49:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "foreach_traversable_iterable.php", line 9, characters 19-37:
  This may be the data source with policy `PRIVATE`
  File "foreach_traversable_iterable.php", line 5, characters 14-24:
  This may be the data sink with policy `PUBLIC`
  File "foreach_traversable_iterable.php", line 25, characters 7-24:
  Another program point contributing to the illegal flow
  File "foreach_traversable_iterable.php", line 24, characters 14-15:
  Another program point contributing to the illegal flow
File "foreach_traversable_iterable.php", line 90, characters 5-52:
Data with policy `PRIVATE` appears in context `VALUE`. (Typing[4379])
  File "foreach_traversable_iterable.php", line 7, characters 14-25:
  This may be the data source with policy `PRIVATE`
  File "foreach_traversable_iterable.php", line 13, characters 14-23:
  This may be the data sink with policy `VALUE`
  File "foreach_traversable_iterable.php", line 40, characters 7-28:
  Another program point contributing to the illegal flow
  File "foreach_traversable_iterable.php", line 38, characters 14-15:
  Another program point contributing to the illegal flow
File "foreach_traversable_iterable.php", line 90, characters 5-52:
Data with policy `PRIVATE` appears in context `KEY`. (Typing[4379])
  File "foreach_traversable_iterable.php", line 7, characters 14-25:
  This may be the data source with policy `PRIVATE`
  File "foreach_traversable_iterable.php", line 11, characters 14-21:
  This may be the data sink with policy `KEY`
  File "foreach_traversable_iterable.php", line 39, characters 7-24:
  Another program point contributing to the illegal flow
  File "foreach_traversable_iterable.php", line 38, characters 14-15:
  Another program point contributing to the illegal flow
File "foreach_traversable_iterable.php", line 99, characters 5-31:
Data with policy `PRIVATE` appears in context `VALUE`. (Typing[4379])
  File "foreach_traversable_iterable.php", line 7, characters 14-25:
  This may be the data source with policy `PRIVATE`
  File "foreach_traversable_iterable.php", line 13, characters 14-23:
  This may be the data sink with policy `VALUE`
  File "foreach_traversable_iterable.php", line 40, characters 7-28:
  Another program point contributing to the illegal flow
  File "foreach_traversable_iterable.php", line 38, characters 14-15:
  Another program point contributing to the illegal flow
  File "foreach_traversable_iterable.php", line 96, characters 5-30:
  Another program point contributing to the illegal flow
File "foreach_traversable_iterable.php", line 99, characters 5-31:
Data with policy `PRIVATE` appears in context `KEY`. (Typing[4379])
  File "foreach_traversable_iterable.php", line 7, characters 14-25:
  This may be the data source with policy `PRIVATE`
  File "foreach_traversable_iterable.php", line 11, characters 14-21:
  This may be the data sink with policy `KEY`
  File "foreach_traversable_iterable.php", line 39, characters 7-24:
  Another program point contributing to the illegal flow
  File "foreach_traversable_iterable.php", line 38, characters 14-15:
  Another program point contributing to the illegal flow
  File "foreach_traversable_iterable.php", line 96, characters 5-30:
  Another program point contributing to the illegal flow
File "foreach_traversable_iterable.php", line 76, characters 5-41:
Data with policy `PRIVATE` appears in context `VALUE`. (Typing[4379])
  File "foreach_traversable_iterable.php", line 7, characters 14-25:
  This may be the data source with policy `PRIVATE`
  File "foreach_traversable_iterable.php", line 13, characters 14-23:
  This may be the data sink with policy `VALUE`
  File "foreach_traversable_iterable.php", line 18, characters 7-28:
  Another program point contributing to the illegal flow
  File "foreach_traversable_iterable.php", line 17, characters 14-15:
  Another program point contributing to the illegal flow
File "foreach_traversable_iterable.php", line 83, characters 5-52:
Data with policy `PRIVATE` appears in context `VALUE`. (Typing[4379])
  File "foreach_traversable_iterable.php", line 7, characters 14-25:
  This may be the data source with policy `PRIVATE`
  File "foreach_traversable_iterable.php", line 13, characters 14-23:
  This may be the data sink with policy `VALUE`
  File "foreach_traversable_iterable.php", line 40, characters 7-28:
  Another program point contributing to the illegal flow
  File "foreach_traversable_iterable.php", line 38, characters 14-15:
  Another program point contributing to the illegal flow
File "foreach_traversable_iterable.php", line 83, characters 5-52:
Data with policy `PRIVATE` appears in context `KEY`. (Typing[4379])
  File "foreach_traversable_iterable.php", line 7, characters 14-25:
  This may be the data source with policy `PRIVATE`
  File "foreach_traversable_iterable.php", line 11, characters 14-21:
  This may be the data sink with policy `KEY`
  File "foreach_traversable_iterable.php", line 39, characters 7-24:
  Another program point contributing to the illegal flow
  File "foreach_traversable_iterable.php", line 38, characters 14-15:
  Another program point contributing to the illegal flow
File "foreach_traversable_iterable.php", line 70, characters 5-59:
Data with policy `VALUE` appears in context `KEY`. (Typing[4379])
  File "foreach_traversable_iterable.php", line 13, characters 14-23:
  This may be the data source with policy `VALUE`
  File "foreach_traversable_iterable.php", line 11, characters 14-21:
  This may be the data sink with policy `KEY`
  File "foreach_traversable_iterable.php", line 39, characters 7-24:
  Another program point contributing to the illegal flow
  File "foreach_traversable_iterable.php", line 38, characters 14-15:
  Another program point contributing to the illegal flow
File "foreach_traversable_iterable.php", line 70, characters 5-59:
Data with policy `KEY` appears in context `VALUE`. (Typing[4379])
  File "foreach_traversable_iterable.php", line 11, characters 14-21:
  This may be the data source with policy `KEY`
  File "foreach_traversable_iterable.php", line 13, characters 14-23:
  This may be the data sink with policy `VALUE`
  File "foreach_traversable_iterable.php", line 40, characters 7-28:
  Another program point contributing to the illegal flow
  File "foreach_traversable_iterable.php", line 38, characters 14-15:
  Another program point contributing to the illegal flow
